--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,19 @@
 version: '3'
 services:
   jenkins:
-    build: .
+    container_name: master
+    image: jenkins/jenkins:lts
     volumes:
       - ./jenkins_home:/var/jenkins_home
+      - ./.ssh/id_rsa:/var/jenkins_home/.ssh/id_rsa
     ports:
       - 8080:8080
       - 50000:50000
+    links:
+     - slave01
+
+  slave01:
+    container_name: slave01
+    image: jenkinsci/ssh-slave
+    environment:
+      - JENKINS_SLAVE_SSH_PUBKEY=${JENKINS_SLAVE_SSH_PUBKEY}
