--- a/slave/Dockerfile
+++ b/slave/Dockerfile
@@ -10,7 +10,11 @@ RUN apt-get clean
 ENV RBENV_ROOT=/usr/local/rbenv
 RUN git clone https://github.com/rbenv/rbenv.git "${RBENV_ROOT}"
 RUN git clone https://github.com/rbenv/ruby-build.git "${RBENV_ROOT}/plugins/ruby-build"
+RUN git clone https://github.com/rbenv/rbenv-gem-rehash.git "${RBENV_ROOT}/plugins/rbenv-gem-rehash"
+RUN git clone https://github.com/rbenv/rbenv-default-gems.git "${RBENV_ROOT}/plugins/rbenv-default-gems"
+RUN git clone https://github.com/rkh/rbenv-update.git "${RBENV_ROOT}/plugins/rbenv-update"
 RUN "${RBENV_ROOT}/plugins/ruby-build/install.sh"
+ADD ./default-gems "${RBENV_ROOT}/default-gems"
 
 RUN echo 'export PATH=${RBENV_ROOT}/bin:${PATH}' >> /etc/profile.d/rbenv.sh
 RUN echo 'eval "$(rbenv init -)"' >> /etc/profile.d/rbenv.sh
