--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,10 +2,11 @@ version: '3'
 services:
   jenkins:
     container_name: master
-    image: jenkins/jenkins:lts
+    build: .
     volumes:
       - ./jenkins_home:/var/jenkins_home
       - ./.ssh/id_rsa:/var/jenkins_home/.ssh/id_rsa
+      - /var/run/docker.sock:/var/run/docker.sock
     ports:
       - 8080:8080
     links:
