--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,14 +6,22 @@ services:
     volumes:
       - ./jenkins_home:/var/jenkins_home
       - ./.ssh/id_rsa:/var/jenkins_home/.ssh/id_rsa
-      - /var/run/docker.sock:/var/run/docker.sock
+      # - /var/run/docker.sock:/var/run/docker.sock
     ports:
       - 8080:8080
     links:
      - slave01
+     - docker-host
 
   slave01:
     container_name: slave01
     build: ./slave
     environment:
       - JENKINS_SLAVE_SSH_PUBKEY=${JENKINS_SLAVE_SSH_PUBKEY}
+
+  docker-host:
+    container_name: docker-host
+    image: docker:dind
+    privileged: true
+    ports:
+      - 2375:2375
