--- a/rbenv-slave/Dockerfile
+++ b/rbenv-slave/Dockerfile
@@ -12,12 +12,18 @@ RUN git clone https://github.com/rbenv/rbenv.git "${RBENV_ROOT}"
 RUN git clone https://github.com/rbenv/ruby-build.git "${RBENV_ROOT}/plugins/ruby-build"
 RUN git clone https://github.com/rbenv/rbenv-gem-rehash.git "${RBENV_ROOT}/plugins/rbenv-gem-rehash"
 RUN git clone https://github.com/rbenv/rbenv-default-gems.git "${RBENV_ROOT}/plugins/rbenv-default-gems"
-RUN git clone https://github.com/rkh/rbenv-update.git "${RBENV_ROOT}/plugins/rbenv-update"
 RUN "${RBENV_ROOT}/plugins/ruby-build/install.sh"
 ADD ./default-gems "${RBENV_ROOT}/default-gems"
 
 RUN echo 'export PATH=${RBENV_ROOT}/bin:${PATH}' >> /etc/profile.d/rbenv.sh
 RUN echo 'eval "$(rbenv init -)"' >> /etc/profile.d/rbenv.sh
 
+RUN chgrp -R jenkins "${RBENV_ROOT}"
+RUN chmod -R g+rwxXs "${RBENV_ROOT}"
+
+USER jenkins
+
 ADD ./ruby-versions.txt /tmp/ruby-versions.txt
 RUN ["/bin/bash", "-l", "-e", "-c", "xargs -L 1 rbenv install < /tmp/ruby-versions.txt"]
+
+USER root
