--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,14 +9,16 @@ services:
     ports:
       - 8080:8080
     links:
-     - rbenv-slave
-     - docker-host
+      - rbenv-slave
+      - docker-host
     environment:
-     - JAVA_OPTS="-Djenkins.install.runSetupWizard=false"
+      - JAVA_OPTS="-Djenkins.install.runSetupWizard=false"
 
   rbenv-slave:
     container_name: rbenv-slave
     build: ./rbenv-slave
+    volumes:
+      - ./rbenv-slave/rbenv/versions:/usr/local/rbenv/versions
     environment:
       - JENKINS_SLAVE_SSH_PUBKEY=${JENKINS_SLAVE_SSH_PUBKEY}
 
