--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,9 +28,11 @@ services:
     container_name: docker-host
     image: docker:dind
     volumes:
-      - ./.docker:/var/lib/docker
+      - docker:/var/lib/docker
     privileged: true
 
 volumes:
   rbenv:
+    driver: local
+  docker:
     driver: local
