--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,7 +24,10 @@ services:
   # tcp://docker-host:2375
   docker-host:
     container_name: docker-host
-    build: ./docker-host
+    build:
+      context: ./docker-host
+      args:
+        - DOCKER_REGISTRY_HOST=docker-registry:5000
     privileged: true
     volumes:
       - docker:/var/lib/docker
