--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,9 +15,13 @@ services:
     environment:
       - JAVA_OPTS="-Djenkins.install.runSetupWizard=false"
 
+  # Jenkins slave settings
+  #   Host Key Verification Strategy: Non verifying Vertification Strategy
+  #   Environment:
+  #     JAVA_HOME: /usr/local/openjdk-8
   slave:
     container_name: slave
-    image: jenkinsci/ssh-slave
+    image: jenkinsci/ssh-slave:v1.0.0
     environment:
       - JENKINS_SLAVE_SSH_PUBKEY=${JENKINS_SLAVE_SSH_PUBKEY}
 
@@ -29,6 +33,8 @@ services:
     privileged: true
     volumes:
       - docker:/var/lib/docker
+    ports:
+      - 5000:5000
     links:
       - docker-registry
 
