--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ services:
     build: .
     volumes:
       - ./jenkins_home:/var/jenkins_home
+      - ./casc_configs:/var/jenkins_conf
       - /var/run/docker.sock:/var/run/docker.sock # set env COMPOSE_CONVERT_WINDOWS_PATHS=1 for windows
     ports:
       - 8080:8080
@@ -14,6 +15,8 @@ services:
       - docker-host
     secrets:
       - jenkins_slave_ssh_private_key
+    environment:
+      - CASC_JENKINS_CONFIG=/var/jenkins_conf
 
   # Jenkins slave settings
   #   Host Key Verification Strategy: Non verifying Vertification Strategy
