--- a/casc_configs/jenkins.yaml
+++ b/casc_configs/jenkins.yaml
@@ -53,6 +53,22 @@ jenkins:
   nodes:
   - permanent:
       launcher:
+        ssh:
+          credentialsId: "8bc54097-d56f-4587-8042-e00dd26509c8"
+          host: "docker-host-slave"
+          port: 22
+          sshHostKeyVerificationStrategy: "nonVerifyingKeyVerificationStrategy"
+      name: "docker-host-slave"
+      nodeProperties:
+      - envVars:
+          env:
+          - key: "JAVA_HOME"
+            value: "/usr/local/openjdk-8"
+      numExecutors: 1
+      remoteFS: "/home/jenkins"
+      retentionStrategy: "always"
+  - permanent:
+      launcher:
         jnlp:
           workDirSettings:
             disabled: false
