--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,7 @@ services:
     secrets:
       - jenkins_slave_ssh_private_key
     environment:
+      - JAVA_OPS=-Dorg.apache.commons.jelly.tags.fmt.timeZone=Asia/Tokyo
       - CASC_JENKINS_CONFIG=/var/jenkins_conf
       - SLAVE_AGENT_PORT=${SLAVE_AGENT_PORT}
 
