--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     volumes:
       - ./jenkins_home:/var/jenkins_home
       - ./casc_configs:/var/jenkins_conf
-      - /var/run/docker.sock:/var/run/docker.sock # set env COMPOSE_CONVERT_WINDOWS_PATHS=1 for windows
+      - /var/run/docker.sock:/var/run/docker.sock
     ports:
       - 8080:8080
     secrets:
@@ -50,7 +50,7 @@ services:
     depends_on:
       - master
     volumes: 
-      - /var/run/docker.sock:/var/run/docker.sock # set env COMPOSE_CONVERT_WINDOWS_PATHS=1 for windows
+      - /var/run/docker.sock:/var/run/docker.sock
     env_file:
       - ssh-slave.env
 
