--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock
     ports:
       - 8080:8080
+      - ${SLAVE_AGENT_PORT}:${SLAVE_AGENT_PORT}
     secrets:
       - jenkins_slave_ssh_private_key
     environment:
